feat: configuração do banco + atualização dos endpoints